[tool.poetry]
name = "aircmd"
version = "0.1.3"
description = "Airbyte CLI"
authors = ["cpdeethree <conor@airbyte.io>"]
packages = [
    { include = "core", from = "ci" },
    { include = "aircmd"},
]

[tool.poetry.dependencies]
prefect = {git = "https://github.com/PrefectHQ/prefect.git", rev = "tasks-on-main-thread"}
python = "^3.11"
dagger-io = "^0.6.4"
structlog = "^23.1.0"
rich = "^11.0.1"
pydantic = "^1.10"
requests = "^2.26.0"
asyncclick = "^8.1.3.4"
pygit2 = "^1.12.1"
python-dotenv = "^1.0.0"
pygithub = "^1.59.1"
urllib3 = "^2.0.7"

[tool.mypy]
strict = "true"
plugins = ["pydantic.mypy"]
show_error_context = true

[tool.ruff]
# ignore line length violations for now
ignore = ["E501"]

[tool.poetry.scripts]
aircmd = "aircmd.main:main"
core = ""

[tool.poetry.group.dev.dependencies]
ruff = "^0.0.262"
mypy = "^1.2.0"

#[tool.poetry.dev.dependencies]
# Example plugin goes here. We run tests against it.
# This also doubles as the official plugin registry
types-requests = "^2.31.0.1"
[tool.poetry.group.test.dependencies]
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

# Aircmd's own ci is of itself a plugin



[tool.poetry.plugins."aircmd.plugins"]
core_ci = "core.ci:core_ci_plugin"
